# IAnoIE

./: .env.example  .gitignore  CLAUDE.md  README.md
.github/workflows/: build.yml
backend/: Dockerfile  pyproject.toml
backend/src/ianoie/: __init__.py  config.py  database.py  main.py
backend/src/ianoie/api/: deps.py  router.py
backend/src/ianoie/api/v1/: apps.py  auth.py  gpu.py  installations.py  jobs.py  logs.py  system.py
backend/src/ianoie/core/: exceptions.py  middleware.py  security.py
backend/src/ianoie/docker_ops/: client.py  container_manager.py  gpu_detector.py  image_manager.py  network_manager.py  volume_manager.py
backend/src/ianoie/models/: __init__.py  app.py  app_log.py  base.py  gpu_metrics.py  installation.py  job.py  user.py
backend/src/ianoie/schemas/: app.py  auth.py  common.py  gpu.py  installation.py  job.py  system.py
backend/src/ianoie/seed/: seed_apps.py
backend/src/ianoie/services/: installation_service.py
backend/src/ianoie/templates/: loader.py  renderer.py
backend/src/ianoie/workers/: celery_app.py
backend/src/ianoie/workers/tasks/: gpu_monitor.py  install.py  uninstall.py
docker/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docker/traefik/: traefik.yml
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
scripts/: backup.sh  install.sh  setup-dgx.sh  update.sh
templates/: comfyui.yaml  jupyterlab.yaml  n8n.yaml  ollama-openwebui.yaml  ollama.yaml  open-webui.yaml  triton-inference.yaml  vllm.yaml
(+32 files in other folders)
